--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 body {
-    background: #6D637B;
+    background: #E2EEFA;
 }
 
 #homepage {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    margin-top: 100px;
 }
 
 #title {
@@ -15,10 +16,18 @@ body {
     margin-bottom: 100px;
 }
 
+#name-and-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-left: 100px;
+    width: 700px;
+}
+
 #interests {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     justify-content: space-evenly;
     margin-left: 40px;
 }
@@ -31,7 +40,7 @@ img {
 
 h1 {
     /* Hi, I’m Charly */
-    font-family: Tuffy;
+    font-family: Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 64px;
@@ -42,17 +51,26 @@ h1 {
 }
 
 h2 {
-    font-family: Tuffy;
+    font-family: Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 50px;
     line-height: 40px;
     text-align: left;
-    color: #61AF9B;
+    color: #F0D79D;
+}
+
+p {
+    font-family: Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 36px;
+    color: #0C416C;
 }
 
 ul {
-    font-family: Tuffy;
+    font-family: Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 30px;
