--- a/index.css
+++ b/index.css
@@ -21,7 +21,26 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     margin-left: 100px;
-    width: 700px;
+    width: 600px;
+    margin-bottom: 100px;
+}
+
+#contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 40px;
+    margin-bottom: 100px;
+}
+
+#projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 40px;
+    margin-bottom: 100px;
 }
 
 #interests {
@@ -30,6 +49,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     margin-left: 40px;
+    margin-bottom: 100px;
 }
 
 img {
@@ -58,6 +78,15 @@ h2 {
     line-height: 40px;
     text-align: left;
     color: #F0D79D;
+}
+
+h3 {
+    font-family: Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 36px;
+    color: #0C416C;
 }
 
 p {
