--- a/index.css
+++ b/index.css
@@ -109,7 +109,6 @@ p {
     position: relative;
     overflow: hidden;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
 }
@@ -127,7 +126,7 @@ p {
     font-family: 'Peddana', serif;
     font-style: normal;
     font-size: 30px;
-    align-items: center;
+    align-items: right;
 }
 
 .project img {
