--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background: #E2EEFA;
+    background-color: black;
 }
 
 #homepage {
@@ -58,7 +58,7 @@ h1 {
     font-size: 100px;
     line-height: 95px;
     text-align: center;
-    color: #0C416C;
+    color: whitesmoke;
 }
 
 h2 {
@@ -68,7 +68,7 @@ h2 {
     font-size: 70px;
     line-height: 40px;
     text-align: center;
-    color: #0C416C;
+    color: whitesmoke;
 }
 
 h3 {
@@ -77,7 +77,7 @@ h3 {
     font-weight: bold;
     font-size: 30px;
     line-height: 36px;
-    color: #0C416C;
+    color: whitesmoke;
 }
 
 h4 {
@@ -87,7 +87,7 @@ h4 {
     font-size: 50px;
     line-height: 40px;
     text-align: center;
-    color: #0C416C;
+    color: whitesmoke;
 }
 
 p {
@@ -97,7 +97,7 @@ p {
     font-size: 40px;
     line-height: 36px;
     text-align: center;
-    color: #0C416C;
+    color: whitesmoke;
 }
 
 a {
@@ -146,6 +146,7 @@ a {
 }
 
 .icon-container i {
+    color: whitesmoke;
     font-size: 10rem;
     margin: auto;
 }
@@ -223,7 +224,46 @@ a {
 
 /* contact info */
 
-#contact {
+#contacts {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 100px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+#contacts-body {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+.contact-icon {
+    /* background-color: whitesmoke; */
+    width: 5rem;
+    height: 5rem;
+    background-color: transparent;
+    display: flex;
+}
+
+.contact-icon i {
+    /* color: whitesmoke; */
+    font-size: 10rem;
+    margin: auto;
+}
+
+
+/* #contact {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -231,4 +271,4 @@ a {
     margin-left: 200px;
     margin-right: 200px;
     margin-bottom: 100px;
-}
+} */
