--- a/index.css
+++ b/index.css
@@ -155,13 +155,12 @@ a {
 /* projects */
 
 #projects {
-    /* position: relative; */
-    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     justify-content: flex-end;
+    padding-bottom: 100px;
 }
 
 .project {
@@ -206,6 +205,7 @@ a {
     /* float: left; */
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: space-evenly;
     width: 31%;
     margin: 1% 1% 45px 1%;
@@ -249,7 +249,6 @@ a {
 }
 
 .contact-icon {
-    /* background-color: whitesmoke; */
     width: 5rem;
     height: 5rem;
     background-color: transparent;
@@ -257,7 +256,6 @@ a {
 }
 
 .contact-icon i {
-    /* color: whitesmoke; */
     font-size: 10rem;
     margin: auto;
 }
